src/assets/main.css
@import './base.css';

#app {
  justify-items: center;
}

.vertical-flex {
  display: flex;
  flex-direction: column;
  width: var(--content-max-width);
  align-items: center;
  justify-content: start;
}

.horizontal-flex {
  display: flex;
  flex-direction: row;
  width: var(--content-max-width);
  align-items: start;
  justify-content: center;
}

.content-panel {
  margin: var(--default-margin);
  padding: calc(2 * var(--default-padding));
  background-color: var(--default-panel-background);
  border-radius: var(--default-border-radius);
  margin-top: calc(var(--default-margin) * 4);
  text-align: center;
  width: var(--content-max-width);
  box-shadow: var(--default-box-shadow);
}

/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

/* Silder settings for toggles*/
.switch {
  position: relative;
  width: 50px;
  height: 30px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: '';
  height: 22px;
  width: 22px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: 0.4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #16a34a;
}

input:checked + .slider:before {
  transform: translateX(20px);
}
/* ----- End Slider Settings -------------------------------- */

